<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="TITLE"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:id="@+id/serverHostText"
                android:text="@string/ServerHost"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/serverHostEditText"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/portViewText"
                android:text="@string/ServerPort"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/portEditText"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>


        <TableRow>

            <TextView
                android:id="@+id/usernameViewText"
                android:text="@string/UserName"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/usernameEditText"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/passwordViewText"
                android:text="@string/prompt_password"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/passwordEditText"
                android:inputType="textPassword"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/firstNameText"
                android:text="@string/FirstName"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/firstNameEditText"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/lastNameText"
                android:text="@string/LastName"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/emailText"
                android:text="@string/prompt_email"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/emailEditText"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow>



            <TextView
                android:id="@+id/genderText"
                android:text="@string/Gender"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioGroup">

                    <RadioButton
                        android:id="@+id/maleRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Male"
                        android:checked="true"
                        />

                    <RadioButton
                        android:id="@+id/femaleRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Female"

                        />

                </RadioGroup>

        </TableRow>

    </TableLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal" >

        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignInButton"
            android:enabled="false"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RegisterButton"
            android:enabled="false"/>

    </LinearLayout>




</LinearLayout>