<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/life_story_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/life_story_text">

            <TextView
                android:id="@+id/life_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/LifeStory" />

            <TextView
                android:id="@+id/life_story_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LifeStoryDescription" />

        </LinearLayout>

        <Switch
            android:id="@+id/life_story_switch"
            android:layout_width="100dp"
            android:layout_height="39dp"
            android:layout_alignRight="@id/life_story_text"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:layout_weight="1"
            android:checked="true"/>

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/family_tree_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/family_tree_text">

            <TextView
                android:id="@+id/family_tree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/FamilyTree" />

            <TextView
                android:id="@+id/family_tree_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FamilyTreeDescription" />

        </LinearLayout>

        <Switch
            android:id="@+id/family_tree_switch"
            android:layout_width="100dp"
            android:layout_height="39dp"
            android:layout_alignRight="@id/family_tree_text"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:layout_weight="1"
            android:checked="true"/>

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spouse_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/spouse_text">

            <TextView
                android:id="@+id/spouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/SpouseLines" />

            <TextView
                android:id="@+id/spouse_lines_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SpouseLinesDescription" />

        </LinearLayout>

        <Switch
            android:id="@+id/spouse_switch"
            android:layout_width="100dp"
            android:layout_height="39dp"
            android:layout_alignRight="@id/spouse_text"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:layout_weight="1"
            android:checked="true"/>

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/father_side_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/father_side_text">

            <TextView
                android:id="@+id/father_side"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/FatherSide" />

            <TextView
                android:id="@+id/father_side_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FatherSideDescription" />

        </LinearLayout>

        <Switch
            android:id="@+id/father_side_switch"
            android:layout_width="100dp"
            android:layout_height="39dp"
            android:layout_alignRight="@id/father_side_text"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:layout_weight="1"
            android:checked="true"/>

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mother_side_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/mother_side_text">

            <TextView
                android:id="@+id/mother_side"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/MotherSide" />

            <TextView
                android:id="@+id/mother_side_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MotherSideDescription" />

        </LinearLayout>

        <Switch
            android:id="@+id/mother_side_switch"
            android:layout_width="100dp"
            android:layout_height="39dp"
            android:layout_alignRight="@id/mother_side_text"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:layout_weight="1"
            android:checked="true"/>

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/male_events_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/male_events_text">

            <TextView
                android:id="@+id/male_events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/MaleEvents" />

            <TextView
                android:id="@+id/male_events_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MaleEventsDescription" />

        </LinearLayout>

        <Switch
            android:id="@+id/male_events_switch"
            android:layout_width="100dp"
            android:layout_height="39dp"
            android:layout_alignRight="@id/male_events_text"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:layout_weight="1"
            android:checked="true"/>

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/female_events_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/female_events_text">

            <TextView
                android:id="@+id/female_events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/FemaleEvents" />

            <TextView
                android:id="@+id/female_events_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FemaleEventsDescription" />

        </LinearLayout>

        <Switch
            android:id="@+id/female_events_switch"
            android:layout_width="100dp"
            android:layout_height="39dp"
            android:layout_alignRight="@id/female_events_text"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:layout_weight="1"
            android:checked="true"/>

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logout_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/logout_text">

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/Logout" />

            <TextView
                android:id="@+id/logout_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MaleEventsDescription" />

        </LinearLayout>

        <Switch
            android:id="@+id/logout_switch"
            android:layout_width="100dp"
            android:layout_height="39dp"
            android:layout_alignRight="@id/logout_text"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:layout_weight="1"
            android:checked="true"/>

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />


</LinearLayout>